--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -13,18 +13,15 @@
   text-align: center;
 }
 
-.list {
-  display: grid;
-  grid-auto-flow: row;
-}
-
 .event {
+  user-select: none;
   padding: 3px;
   line-height: 20px;
   display: grid;
   grid-auto-flow: row;
+  grid-template-columns: 1fr 1fr 0.5fr max-content;
   grid-template-areas:
-    'date  date hours action'
+    'date  date date date'
     'start end hours action';
 }
 
@@ -34,7 +31,7 @@
 
 .date {
   grid-area: date;
-  font-weight: 200;
+  font-weight: 100;
 }
 .start {
   grid-area: start;
@@ -58,10 +55,15 @@
   line-height: 20px;
   width: max-content;
   font-weight: 900;
-  background-color: rgb(49, 218, 125);
-  color: rgb(35, 43, 49);
+  background-color: rgb(170, 81, 69);
+  color: rgb(255, 155, 155);
   font-size: 10px;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+.action:hover {
+  background-color: rgba(49, 218, 125, 0.74);
 }
 
 .terminalContainer {
