--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -4,10 +4,9 @@
   line-height: 20px;
   display: grid;
   grid-auto-flow: row;
-  grid-template-columns: 1fr 1fr 0.5fr max-content;
-  grid-template-areas:
-    'date  date date date'
-    'start end hours action';
+  grid-template-columns: auto auto auto auto min-content;
+  grid-template-areas: 'date start end hours action';
+  gap: 16px;
 }
 
 .eventSelected {
@@ -20,21 +19,30 @@
   background-color: rgba(49, 218, 125, 0.05);
 }
 
+.divider {
+  border-bottom: 2px dashed rgba(49, 218, 125, 0.301);
+}
+
 .date {
   grid-area: date;
   font-weight: 100;
 }
+
 .start {
   grid-area: start;
   font-weight: bolder;
 }
+
 .end {
   grid-area: end;
   font-weight: bolder;
 }
+
 .hours {
   grid-area: hours;
+  text-align: right;
 }
+
 .action {
   display: flex;
   text-align: center;
