feat: Add header and icon library

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,25 @@
 .root {
+  width: 100%;
   display: grid;
   grid-auto-flow: column;
+  justify-content: end;
+  gap: var(--spacing-xs);
+  margin-bottom: var(--spacing-md);
+}
+
+.action {
+  display: grid;
+  grid-auto-flow: row;
+  justify-items: center;
+  padding: var(--spacing-xs);
+  gap: var(--spacing-xs);
+  cursor: pointer;
+}
+
+.action > svg {
+  font-size: 24px;
+}
+
+.action > span {
+  font-size: 10px;
 }
