--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: grid;
   grid-auto-flow: column;
-  justify-content: end;
+  justify-content: space-around;
   gap: var(--spacing-xs);
   margin-bottom: var(--spacing-md);
 }
