--- a/src/components/Switcher/Switcher.module.css
+++ b/src/components/Switcher/Switcher.module.css
@@ -1,7 +1,7 @@
 .root {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: min-content 2fr min-content;
   align-items: center;
   margin-block: 12px;
 }
@@ -9,3 +9,44 @@
 .root > span {
   text-align: center;
 }
+
+.switch {
+  position: relative;
+  padding: 6px 12px;
+  background-color: var(--secondary);
+  color: var(--on-secondary);
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  min-width: 80px;
+}
+
+.switch::before {
+  content: '';
+  border-radius: 50%;
+  position: absolute;
+  transform: scale(1.3);
+  opacity: 0;
+  background-color: rgb(255, 255, 255);
+  width: 200%;
+  height: 200%;
+  top: calc(50% - 100%);
+  left: calc(50% - 100%);
+  pointer-events: none;
+}
+
+.switch:hover::before {
+  opacity: 0.2;
+}
+
+/* background-color: rgb(138 40 40);
+position: absolute;
+border-radius: 50%;
+opacity: 0;
+pointer-events: none;
+content: '';
+transform: scale(var(--mdc-ripple-fg-scale, 1));
+top: calc(50% - 100%);
+left: calc(50% - 100%);
+width: 200%;
+height: 200%; */
