refactor: Do some changes

--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,7 +1,11 @@
 .root {
-  display: flex;
+  display: grid;
+  grid-auto-flow: row;
   justify-content: center;
-  margin-top: 150px;
+  padding-top: 150px;
+  align-items: center;
+  text-align: center;
+  gap: 32px;
 }
 
 .button {
