--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,18 +2,49 @@
   width: 100%;
   display: grid;
   grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-content: space-around;
   gap: var(--spacing-xs);
   margin-bottom: var(--spacing-md);
 }
 
 .action {
+  position: relative;
   display: grid;
   grid-auto-flow: row;
   justify-items: center;
   padding: var(--spacing-xs);
   gap: var(--spacing-xs);
   cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+}
+
+.action::before,
+.actionActive::before {
+  content: '';
+  border-radius: 50%;
+  position: absolute;
+  transform: scale(1.3);
+  opacity: 0;
+  background-color: rgb(255, 255, 255);
+  width: 200%;
+  height: 200%;
+  top: calc(50% - 100%);
+  left: calc(50% - 100%);
+  pointer-events: none;
+}
+
+.action:hover::before {
+  opacity: 0.08;
+}
+
+.actionActive::before {
+  opacity: 0.08;
+}
+
+.actionActive {
+  composes: action;
 }
 
 .action > svg {
