--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -1,5 +1,9 @@
 .root {
-  margin-top: var(--spacing-md);
+  margin-bottom: var(--spacing-xs);
+  margin-inline: var(--spacing-xs);
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
+    0 2px 4px -1px rgba(0, 0, 0, 0.2);
+  z-index: 1040;
 }
 
 .terminal {
