--- a/src/components/Switcher/Switcher.module.css
+++ b/src/components/Switcher/Switcher.module.css
@@ -3,7 +3,7 @@
   grid-auto-flow: column;
   grid-template-columns: min-content 2fr min-content;
   align-items: center;
-  margin-block: 12px;
+  margin-bottom: var(--spacing-xs);
 }
 
 .root > span {
